[gd_scene load_steps=13 format=3 uid="uid://dtlt37yc6h5f2"]

[ext_resource type="Script" path="res://water/water-manager.gd" id="1_o5y5g"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_o58l6"]
[ext_resource type="PackedScene" uid="uid://b2gkd0aemcldr" path="res://entities/boat/boat.tscn" id="3_ibbvs"]
[ext_resource type="Theme" uid="uid://ps5kwnepi662" path="res://ui/ui_theme.tres" id="3_uwe7x"]
[ext_resource type="Material" uid="uid://cakn2wicml134" path="res://water/water_material.tres" id="5_jxwx4"]
[ext_resource type="PackedScene" uid="uid://s8uxf234ania" path="res://ui/task_entry.tscn" id="5_q6hmb"]
[ext_resource type="PackedScene" uid="uid://hvh21q682k31" path="res://entities/fishing_spot/bubble_scene.tscn" id="7_wcwri"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xcn30"]

[sub_resource type="Sky" id="Sky_7bli4"]
sky_material = SubResource("ProceduralSkyMaterial_xcn30")

[sub_resource type="Environment" id="Environment_bfrrs"]
background_mode = 2
sky = SubResource("Sky_7bli4")
ambient_light_source = 3
ambient_light_color = Color(0.710464, 0.710464, 0.710464, 1)
reflected_light_source = 2
tonemap_mode = 2
fog_enabled = true

[sub_resource type="Environment" id="Environment_18f0k"]
background_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_ynkkp"]
size = Vector2(200, 200)
subdivide_width = 200
subdivide_depth = 200

[node name="Main" type="Node3D"]
script = ExtResource("1_o58l6")

[node name="WaterManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_o5y5g")
enabled = true
water_path = NodePath("../Water")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bfrrs")

[node name="Sunlight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, 10, 0)
light_color = Color(0.168195, 0.164933, 0.431963, 1)

[node name="Boat" parent="." instance=ExtResource("3_ibbvs")]
linear_damp = 4.0
min_max_rotation = Vector3(1, 6, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -192.0
offset_right = 250.0
offset_bottom = -120.0
grow_vertical = 0
theme = ExtResource("3_uwe7x")

[node name="StartGameButton" type="Button" parent="CanvasLayer/MainMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("3_uwe7x")
text = "Start game"

[node name="QuitGameButton" type="Button" parent="CanvasLayer/MainMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Quit game"

[node name="TaskEntry" parent="CanvasLayer" instance=ExtResource("5_q6hmb")]

[node name="FoamViewport" type="SubViewport" parent="."]
canvas_cull_mask = 4293918720

[node name="Base" type="Node3D" parent="FoamViewport"]

[node name="FoamCamera" type="Camera3D" parent="FoamViewport/Base"]
transform = Transform3D(1, 0, 0, 0, 1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 15.95, 0)
cull_mask = 2
environment = SubResource("Environment_18f0k")
projection = 1
size = 51.2

[node name="Water" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_ynkkp")
surface_material_override/0 = ExtResource("5_jxwx4")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Water"]
remote_path = NodePath("../../FoamViewport/Base")
update_rotation = false
update_scale = false

[node name="Bubbles" type="Node3D" parent="."]

[node name="Bubbles4" parent="Bubbles" instance=ExtResource("7_wcwri")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.1131, 0, 63.8605)

[node name="Bubbles3" parent="Bubbles" instance=ExtResource("7_wcwri")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -57.9115, 0, 0)

[node name="Bubbles2" parent="Bubbles" instance=ExtResource("7_wcwri")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.9533, 0, -48.558)

[node name="Bubbles" parent="Bubbles" instance=ExtResource("7_wcwri")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.1131, 0, 0)

[connection signal="pressed" from="CanvasLayer/MainMenu/StartGameButton" to="." method="start_game"]
[connection signal="pressed" from="CanvasLayer/MainMenu/QuitGameButton" to="." method="quit_game"]
